--- a/CodeBreakers/app/src/main/AndroidManifest.xml
+++ b/CodeBreakers/app/src/main/AndroidManifest.xml
@@ -9,11 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Result" android:parentActivityName=".MainActivity"></activity>
-        <activity android:name=".Easy" ></activity>
+        <activity android:name=".Medium"></activity>
+        <activity
+            android:name=".Result"
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".Easy" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
