--- a/CodeBreakers/app/src/main/AndroidManifest.xml
+++ b/CodeBreakers/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Medium"></activity>
+        <activity android:name=".Hard"></activity>
+        <activity android:name=".Medium" />
         <activity
             android:name=".Result"
             android:parentActivityName=".MainActivity" />
