--- a/CodeBreakers/app/src/main/AndroidManifest.xml
+++ b/CodeBreakers/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HardFriend"></activity>
+        <activity android:name=".HardFriend"/>
         <activity android:name=".MediumFriend" />
         <activity android:name=".EasyFriend" />
         <activity android:name=".Hard" />
@@ -18,13 +18,13 @@
             android:name=".Result"
             android:parentActivityName=".MainActivity" />
         <activity android:name=".Easy" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:screenOrientation="unspecified">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".MyService"/>
     </application>
 
 </manifest>
