--- a/CuratorsScorepad/app/src/main/AndroidManifest.xml
+++ b/CuratorsScorepad/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CuratorsScorepad">
+        <activity android:name=".Players"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
