--- a/CuratorsScorepad/app/src/main/AndroidManifest.xml
+++ b/CuratorsScorepad/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="brad.curatorsscorepad">
 
     <application
+        android:name=".GlobalClass"
         android:allowBackup="true"
         android:icon="@mipmap/icon"
         android:label="@string/app_name"
